Fixed the full-screen overflow issue

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,3 +1,15 @@
+html,
+body {
+  width: 100vw;
+  width: 100%;
+  height: 100vh;
+  height: 100%;
+}
+
+canvas {
+  font-size: 10vh;
+}
+
 .centered {
   display: -ms-grid;
   display: grid;
@@ -17,6 +29,3 @@
 .hidden {
   display: none;
 }
-
-
-/* style="font-size: 32px; padding: 5px;" */
